# Opir

./: .gitignore  CITATION.cff  README.md  pyproject.toml
data/eval/: README.md
docs/: evaluation.md  project_notes.md
evaluation/: __init__.py  benchmark_guardrail_speed.py  test_guardrails.py  test_guardrails_vllm.py
results/: README.md
results/evaluation/: README.md  evaluation_results.json  evaluation_results_summary.csv
results/latency/: README.md  guardrail_latency_throughput.csv  guardrail_latency_throughput.json  run_speed_bench.sh
taxonomy/: README.md  guardrail_taxonomy.json
